results/SpecGenBench/2-shot/log-MyPower-2023_11_06_02_38_55.txt
class MyPower {
    //@ requires n >= 0;
    //@ ensures \result == (\product int i; 0 <= i && i < n; x);
    public static int power(int x, int n) {
        int res = 1;
        //@ maintaining res == (\product int i; 0 <= i && i < i; x);
        //@ decreasing n - i;
        for(int i = 0; i < n; i++)
            res = res * x;
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MyPower.java:6: error: variable i is already defined in method power(int,int)
        //@ maintaining res == (\product int i; 0 <= i && i < i; x);
                                             ^
1 error

